fix: adjusted tooltip z-index

--- a/app/styles/fluid/components/fluid-tooltip.scss
+++ b/app/styles/fluid/components/fluid-tooltip.scss
@@ -1,5 +1,6 @@
 .fluid-tooltip {
   max-width: 350px;
+  z-index: 1;
 }
 
 .fluid-tooltip-arrow::before {
